src/app/front-end/nav/nav.component.scss
@import '../../../variables';
$nav-light-gray: #f8f8f8;
$nav-gray: #e7e7e7;
$nav-shaddow: rgba(0, 0, 0, .175);
$nav-shaddow-light: rgba(0, 0, 0, .15);

.nav {
  background-color: $nav-light-gray;
  display: flex;
  justify-content: space-between;

  // top container holds the home button, and mobile only nav buttons (toggle nav, etc)
  .top-container {
    display: flex;
    justify-content: space-between;

    .home {
      align-items: center;
      display: flex;
      font-size: 44px;
      padding: 2px;
    }

    .mobile-nav {
      display: none;
      margin-left: auto;
    }
  }

  .top-container,
  .item {
    padding: 10px;

    a {
      display: block;
      padding: 10px;
    }
  }

  .items {
    align-items: center;
    display: flex;
    justify-content: space-between;
    width: 100%;

    .left,
    .right {
      display: flex;
      height: 100%;
      justify-content: space-between;
    }

    .left {
      margin-right: auto;
    }

    .right {
      margin-left: auto;
    }

    .item {
      align-items: center;
      display: flex;

      &.active {
        background-color: $nav-gray;
      }
    }
  }
  @media (max-width: $mobile-break-point) {
    display: initial;

    .top-container {
      .mobile-nav {
        display: initial;
      }
    }

    .items {
      display: initial;

      .left,
      .right {
        display: initial;

        .item {
          display: block;
          text-align: center;
        }
      }
    }
  }
}

.sub-items-container {
  background-color: $white;
  height: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 68px;
  z-index: 3;

  &.active {
    border-bottom: 1px solid $nav-shaddow-light;
    box-shadow: 0 6px 12px $nav-shaddow;
    height: initial;
  }

  .sub-items {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
    margin: 0 auto;
    max-width: 900px;
    width: 80%;
  }
}

.sub-item {
  margin: 20px 2%;
  text-align: center;
  width: 29.33%;

  a {
    display: block;
    position: relative;

    &:focus {
      outline: 4px solid $primary-color;
    }

    .overlay {
      background-color: $black;
      bottom: 0;
      left: 0;
      opacity: .7;
      position: absolute;
      right: 0;
      top: 0;
    }

    .title {
      bottom: 0;
      color: $white;
      font-family: $title-font;
      font-size: 32px;
      left: 0;
      position: absolute;
      right: 0;
      top: 50%;
      z-index: 1;
      @media (min-width: 900px) {
        font-size: 42px;
      }
      @media (min-width: 1200px) {
        font-size: 58px;
      }
    }

    img {
      width: 100%;
    }
  }
}

